[package]
name = "payment_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
chrono = "0.4.31"
reqwest = { version = "0.11.20", features = ["serde_json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
